@@ -13,6 +13,14 @@ METHODS
     "new(%params)"
              Constructor.
 
+            *       "print_id"
+
+                     Flag, that means printing of ID.
+                     Affected methods:
+                     - line()
+                     - print() (by line()).
+                     Default value is 0.
+
             *       "tube"
 
                      Map::Tube object.
